--- a/_site.yml
+++ b/_site.yml
@@ -6,4 +6,7 @@ output:
     self_contained: no  
     theme: flatly  
 navbar:  
-  title: "Planning for Calm" 
+  title: "Planning for Calm"
+    right:
+    - text: "What is Mindfulness?"
+      href: Intro.html
