--- a/_site.yml
+++ b/_site.yml
@@ -4,7 +4,7 @@ output_dir: "docs"
 output:  
   html_document:  
     self_contained: no  
-    theme: flatly  
+    theme: minty  
 navbar:  
   title: "Planning for Calm"
     right:
