Added an About page with short profiles of the team and links to our respective websites.
Addressed typo in Glossary.

--- a/_site.yml
+++ b/_site.yml
@@ -10,6 +10,8 @@ navbar:
   title: "Planning for Calm"
   type: default
   right:
+    - text: "About"
+      href: About.html
     - text: "FAQ"
       href: FAQ.html
     - text: "Resources"
